# WebControl

./: README.md
RCSeq/: All_off  All_on  P1_off  P1_on  P2_off  P2_on  P3_off  P3_on
WebControl/: CMakeLists.txt  WebControl.cpp
